--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -26,9 +26,16 @@
       </div>
     {% endif %}
 
-    <!-- 论文标题：默认跳转到详情页 -->
     <h2 class="archive__item-title" itemprop="headline">
-      <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
+      {% if post.link %}
+        <a href="{{ post.link }}">{{ title }}</a> 
+        <a href="{{ base_path }}{{ post.url }}" rel="permalink">
+          <i class="fa fa-link" aria-hidden="true" title="permalink"></i>
+          <span class="sr-only">Permalink</span>
+        </a>
+      {% else %}
+        <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
+      {% endif %}
     </h2>
     
     {% if post.read_time %}
@@ -36,36 +43,71 @@
     {% endif %}
 
     {% if post.collection == 'teaching' %}
-      <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
+      <p>{{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
     {% elsif post.collection == 'publications' %}
       <p>Published in <i>{{ post.venue }}</i>{% if post.year %}, {{ post.year }}{% endif %}</p>
     {% elsif post.date %}
-      <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
+      <p class="page__date">
+        <strong>
+          <i class="fa fa-fw fa-calendar" aria-hidden="true"></i> 
+          {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}
+        </strong> 
+        <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">
+          {{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}
+        </time>
+      </p>
     {% endif %}
 
-    <!-- 新增：优先显示 abstract -->
-    {% if post.abstract %}
-      <p class="archive__item-excerpt" itemprop="description">{{ post.abstract | markdownify }}</p>
-    {% elsif post.excerpt and site.read_more != 'enabled' %}
+    {% if post.excerpt and site.read_more != 'enabled' %}
       <p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify }}</p>
     {% elsif post.excerpt and site.read_more == 'enabled' %}
       <p class="archive__item-excerpt" itemprop="description">
-        <p>{{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }}<strong><a href="{{ base_path }}{{ post.url }}" rel="permalink"> Read more</a></strong></p>
+        <p>{{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }}
+        <strong><a href="{{ base_path }}{{ post.url }}" rel="permalink"> Read more</a></strong></p>
       </p>
     {% endif %}
     
-    <!-- 推荐引用 / 外部链接 -->
-    {% if post.paperurl %}
-      <p><a href="{{ post.paperurl }}" target="_blank">View Paper</a></p>
-    {% endif %}
-
-    {% if post.citation %}
+    {% if post.citation and post.paperurl and post.slidesurl %}
+      <p>Recommended citation: {{ post.citation }}<br />
+      <a href="{{ post.paperurl }}">Download Paper</a> | 
+      <a href="{{ post.slidesurl }}">Download Slides</a></p>
+    {% elsif post.citation and post.paperurl %}
+      <p>Recommended citation: {{ post.citation }}<br />
+      <a href="{{ post.paperurl }}">Download Paper</a></p>
+    {% elsif post.citation and post.slidesurl %}
+      <p>Recommended citation: {{ post.citation }}<br />
+      <a href="{{ post.slidesurl }}">Download Slides</a></p>
+    {% elsif post.citation %}
       <p>Recommended citation: {{ post.citation }}</p>
+    {% elsif post.paperurl %}
+      <p><a href="{{ post.paperurl }}">Download Paper</a></p>
+    {% elsif post.slidesurl %}
+      <p><a href="{{ post.slidesurl }}">Download Slides</a></p>
     {% endif %}
 
-    {% if post.slidesurl %}
-      <p><a href="{{ post.slidesurl }}">Download Slides</a></p>
+    {% if post.abstract %}
+      <div class="archive__item-abstract">
+        <button type="button" class="abstract-toggle" onclick="toggleAbstract(this)">
+          Show Abstract
+        </button>
+        <div class="abstract-content" style="display:none; margin-top:0.5em;">
+          <p>{{ post.abstract }}</p>
+        </div>
+      </div>
     {% endif %}
 
   </article>
 </div>
+
+<script>
+function toggleAbstract(btn) {
+  const content = btn.nextElementSibling;
+  if (content.style.display === "none") {
+    content.style.display = "block";
+    btn.textContent = "Hide Abstract";
+  } else {
+    content.style.display = "none";
+    btn.textContent = "Show Abstract";
+  }
+}
+</script>
