--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -46,6 +46,9 @@
       <p>{{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
     {% elsif post.collection == 'publications' %}
       <p>Published in <i>{{ post.venue }}</i>{% if post.year %}, {{ post.year }}{% endif %}</p>
+      {% if post.authors %}
+      <p><strong>Authors:</strong> {{ post.authors }}</p>
+      {% endif %}
     {% elsif post.date %}
       <p class="page__date">
         <strong>
