--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -94,7 +94,7 @@
           Show Abstract
         </button>
         <div class="abstract-content" style="display:none; margin-top:0.5em;">
-          <p>{{ post.abstract }}</p>
+           <p style="text-align: justify;">{{ post.abstract }}</p>
         </div>
       </div>
     {% endif %}
